fix redundant main content spacing on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,7 +163,7 @@ body {
 }
 main {
 	width: 720px;
-	max-width: calc(100% - 2em);
+	max-width: 100%;
 	margin: auto;
 	padding: 3em 1em;
 }
@@ -182,12 +182,10 @@ hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray-light));
 }
+
 @media (max-width: 720px) {
 	body {
 		font-size: 18px;
-	}
-	main {
-		padding: 1em;
 	}
 }
 
